<resources>
    <string name="app_name">Music Quizz App</string>
    <string name="action_settings">Settings</string>
    <string name="result_label">RESULT</string>
    <string name="score_label">3/5</string>
    <string name="total_score_label">Total score: 333</string>
    <string name="return_name">return</string>
    <string name="question_number_label">Q1</string>
    <string name="question_content">Question</string>
    <string name="answer_one_label">answer1</string>
    <string name="answer_two_label">answer2</string>
    <string name="answer_three_label">answer3</string>
    <string name="answer_four_label">answer4</string>
    <string name="quiz_name_label">Musician\'s Quiz</string>
    <string name="start_quiz_btn">Start Quiz</string>
    <string name="start_img">start_img</string>
    <string name="img_question">question_img</string>
    <string name="check">Check</string>
</resources>
